# llm_finetuning_experiments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data_collection/: README.md  prepare_puzzleqa.py  prepare_writingprompts.py
